FEAT: filtering weight classes by name and OPEN

--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -3,6 +3,6 @@
 
 
 <div>
-  <p> test </p>
+  <p> ELO scores for all Mississippi Athletes in All Divisions </p>
   <app-athlete-page></app-athlete-page>
 </div>
